--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -5,4 +5,5 @@ set(server_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/player_sao.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/serveractiveobject.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/unit_sao.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/worldsettings.cpp
 	PARENT_SCOPE)
