Add basic wayland support

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -217,6 +217,31 @@ endif(ENABLE_REDIS)
 
 find_package(SQLite3 REQUIRED)
 
+OPTION(ENABLE_WAYLAND "Enable wayland support" TRUE)
+set(USE_WAYLAND FALSE)
+
+if(ENABLE_WAYLAND)
+	find_library(WAYLANDCLIENT_LIBRARY NAMES wayland-client)
+	find_library(EGL_LIBRARY NAMES EGL)
+	find_library(WAYLANDEGL_LIBRARY NAMES wayland-egl)
+
+	if(WAYLANDCLIENT_LIBRARY AND EGL_LIBRARY AND WAYLANDEGL_LIBRARY)
+		set(USE_WAYLAND TRUE)
+	endif(WAYLANDCLIENT_LIBRARY AND EGL_LIBRARY AND WAYLANDEGL_LIBRARY)
+
+	set(WAYLAND_LIBRARIES
+		${WAYLANDCLIENT_LIBRARY}
+		${EGL_LIBRARY}
+		${WAYLANDEGL_LIBRARY}
+	)
+endif(ENABLE_WAYLAND)
+
+if(USE_WAYLAND)
+	message(STATUS "Wayland support enabled.")
+else(USE_WAYLAND)
+	message(STATUS "Wayland support disabled.")
+endif(USE_WAYLAND)
+
 OPTION(ENABLE_PROMETHEUS "Enable prometheus client support" FALSE)
 set(USE_PROMETHEUS FALSE)
 
@@ -557,6 +582,7 @@ if(BUILD_CLIENT)
 		${JPEG_LIBRARIES}
 		${BZIP2_LIBRARIES}
 		${PNG_LIBRARIES}
+		${WAYLAND_LIBRARIES}
 		${X11_LIBRARIES}
 		${SOUND_LIBRARIES}
 		${SQLITE3_LIBRARY}
@@ -702,7 +728,7 @@ if(MSVC)
 	if(CMAKE_SIZEOF_VOID_P EQUAL 4)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /arch:SSE")
 	endif()
-	
+
 	if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 		set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /DEBUG /OPT:REF /OPT:ICF")
 	else()
