--- a/src/cmake_config.h.in
+++ b/src/cmake_config.h.in
@@ -19,6 +19,7 @@
 #cmakedefine01 USE_CURL
 #cmakedefine01 USE_SOUND
 #cmakedefine01 USE_FREETYPE
+#cmakedefine01 USE_WAYLAND
 #cmakedefine01 USE_CURSES
 #cmakedefine01 USE_LEVELDB
 #cmakedefine01 USE_LUAJIT
